--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "2amigos/yii2-file-upload-widget": "~1.0"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "*",
+        "yiisoft/yii2-codeception": "^2.0",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*"
