--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -34,3 +34,11 @@ config:
     # the entry script URL (with host info) for functional and acceptance tests
     # PLEASE ADJUST IT TO THE ACTUAL ENTRY SCRIPT URL
     test_entry_url: http://localhost:8080/index-test.php
+modules:
+    config:
+        Db:
+            class: yii\db\Connection
+            dsn: 'mysql:host=localhost;dbname=ira_site_test'
+            user: 'web'
+            password: 'web'
+            dump: tests/_data/dump.sql
