--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-imagine": "*",
         "bupy7/yii2-widget-cropbox": "*",
-        "2amigos/yii2-file-upload-widget": "~1.0"
+        "2amigos/yii2-file-upload-widget": "~1.0",
+        "skeeks/yii2-ckeditor": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "^2.0",
