New admin panel

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-imagine": "*",
         "bupy7/yii2-widget-cropbox": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
-        "skeeks/yii2-ckeditor": "*"
+        "skeeks/yii2-ckeditor": "*",
+        "rmrevin/yii2-fontawesome": "~2.12"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "^2.0",
