--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*",
+        "yiisoft/yii2-swiftmailer": "^2.0",
         "yiisoft/yii2-imagine": "*",
         "bupy7/yii2-widget-cropbox": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
