--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
         "yiisoft/yii2-imagine": "*",
         "bupy7/yii2-widget-cropbox": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
-        "skeeks/yii2-ckeditor": "*",
-        "rmrevin/yii2-fontawesome": "~2.12"
+        "rmrevin/yii2-fontawesome": "~2.12",
+        "yiidoc/yii2-redactor": "*",
+        "2amigos/yii2-transliterator-helper": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "^2.0",
